force-app/main/default/objects/ServiceContractChange__c/ServiceContractChange__c.object-meta.xml
<CustomObject>
    <label>サービス_入替</label>
    <nameField>
        <label>サービス契約_入替名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>