force-app/main/default/objects/ServiceContractChange__c/fields/AntisocialArticleChange__c.field-meta.xml
<CustomField>
    <fullName>AntisocialArticleChange__c</fullName>
    <label>反社条文対応_入替</label>
    <length>255</length>
    <type>Text</type>
</CustomField>