force-app/main/default/objects/ServiceContractChange__c/fields/AntisocialPostscriptUnavailableChange__c.field-meta.xml
<CustomField>
    <fullName>AntisocialPostscriptUnavailableChange__c</fullName>
    <label>反社追記不可対応_入替</label>
    <length>255</length>
    <type>Text</type>
</CustomField>