force-app/main/default/objects/ServiceContractChange__c/fields/AntisocialSpecifyContentChange__c.field-meta.xml
<CustomField>
    <fullName>AntisocialSpecifyContentChange__c</fullName>
    <label>反社対応指定内容_入替</label>
    <length>255</length>
    <type>Text</type>
</CustomField>