force-app/main/default/objects/ServiceContractChange__c/fields/AutoResidentChangeType__c.field-meta.xml
<CustomField>
    <fullName>AutoResidentChangeType__c</fullName>
    <label>自動入居者変更種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>翌日</fullName>
            </value>
            <value>
                <fullName>指定日</fullName>
            </value>
            <value>
                <fullName>月末</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>