force-app/main/default/objects/ServiceContractChange__c/fields/ChangeLeaveRequest3__c.field-meta.xml
<CustomField>
    <fullName>ChangeLeaveRequest3__c</fullName>
    <label>入替退去お願い事３</label>
    <length>255</length>
    <type>Text</type>
</CustomField>