force-app/main/default/objects/ServiceContractChange__c/fields/ChangeMoveDateStandard__c.field-meta.xml
<CustomField>
    <fullName>ChangeMoveDateStandard__c</fullName>
    <label>入替入居日基準</label>
    <length>255</length>
    <type>Text</type>
</CustomField>