force-app/main/default/objects/ServiceContractChange__c/fields/ChangeMoveRequest1__c.field-meta.xml
<CustomField>
    <fullName>ChangeMoveRequest1__c</fullName>
    <label>入替入居お願い事１</label>
    <length>255</length>
    <type>Text</type>
</CustomField>