force-app/main/default/objects/ServiceContractChange__c/fields/CleanArrangementChargess__c.field-meta.xml
<CustomField>
    <fullName>CleanArrangementChargess__c</fullName>
    <label>清掃手配手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>