force-app/main/default/objects/ServiceContractChange__c/fields/CleaningReformCost__c.field-meta.xml
<CustomField>
    <fullName>CleaningReformCost__c</fullName>
    <label>リフォーム費用（清掃）</label>
    <type>TextArea</type>
</CustomField>