force-app/main/default/objects/ServiceContractChange__c/fields/FormulaRecordType__c.field-meta.xml
<CustomField>
    <fullName>FormulaRecordType__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>レコードタイプ数式</label>
    <type>Text</type>
</CustomField>