force-app/main/default/objects/ServiceContractChange__c/fields/IsAutoUpdataResidentLeave__c.field-meta.xml
<CustomField>
    <fullName>IsAutoUpdataResidentLeave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動入居者変更フラグ（退去）</label>
    <type>Checkbox</type>
</CustomField>