force-app/main/default/objects/ServiceContractChange__c/fields/IsClean__c.field-meta.xml
<CustomField>
    <fullName>IsClean__c</fullName>
    <label>清掃有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>