force-app/main/default/objects/ServiceContractChange__c/fields/KeyAdditionLendingPopappSetting__c.field-meta.xml
<CustomField>
    <fullName>KeyAdditionLendingPopappSetting__c</fullName>
    <label>鍵_追加貸出_ポップアップ設定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>