force-app/main/default/objects/ServiceContractChange__c/fields/KeyManagementEnclosedDocument__c.field-meta.xml
<CustomField>
    <fullName>KeyManagementEnclosedDocument__c</fullName>
    <label>鍵管理_同封書面</label>
    <length>255</length>
    <type>Text</type>
</CustomField>