force-app/main/default/objects/ServiceContractChange__c/fields/KeyManualMemoColumn__c.field-meta.xml
<CustomField>
    <fullName>KeyManualMemoColumn__c</fullName>
    <label>鍵マニュアルメモ欄</label>
    <length>255</length>
    <type>Text</type>
</CustomField>