force-app/main/default/objects/ServiceContractChange__c/fields/KeyOtherPopappSetting__c.field-meta.xml
<CustomField>
    <fullName>KeyOtherPopappSetting__c</fullName>
    <label>鍵_その他_ポップアップ設定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>