force-app/main/default/objects/ServiceContractChange__c/fields/OtherReformCost__c.field-meta.xml
<CustomField>
    <fullName>OtherReformCost__c</fullName>
    <label>リフォーム費用（他）</label>
    <type>TextArea</type>
</CustomField>