force-app/main/default/objects/ServiceContractChange__c/fields/ResidentInfoArrangement__c.field-meta.xml
<CustomField>
    <fullName>ResidentInfoArrangement__c</fullName>
    <label>入居者情報取り決め</label>
    <length>255</length>
    <type>Text</type>
</CustomField>